example/service.yml
kind: Service
apiVersion: v1
metadata:
  name: redirect-service
spec:
  selector:
    app: redirect
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  type: NodePort
